--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-hid = "0.4.1"
+#hid = "0.4.1"
+hidapi = "1.1.1"
 tracing = "0.1.12"
 tracing-subscriber = "0.2.0"
