--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ edition = "2018"
 hidapi = "1.1.1"
 tracing = "0.1.12"
 tracing-subscriber = "0.2.0"
+zip = "0.5.4"
+base-encode = "0.3.1"
+counted-array = "0.1.2"
