--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+base-encode = "0.3.1"
+#counted-array = "0.1.2"
+derive_more = "0.99.2"
 #hid = "0.4.1"
 hidapi = "1.1.1"
 tracing = "0.1.12"
 tracing-subscriber = "0.2.0"
 zip = "0.5.4"
-base-encode = "0.3.1"
-counted-array = "0.1.2"
-derive_more = "0.99.2"
